--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
-@import-normalize; /* bring in normalize.css styles */
+
 
 body {
-  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 1.5;
+
+  background-color: var(--primary-white);
 }
 
 code {
@@ -12,36 +19,4 @@ code {
     monospace;
 }
 
-/* RESET scc */
 
-* {
-  padding: 0;
-  margin: 0;
-}
-
-img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul,
-ol,
-li {
-  list-style: none;
-}
-
-input:hover,
-input:focus {
-  outline: none;
-}
-
-button {
-  border: none;
-  outline: none;
-}
